methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:34: error: ';' expected but ')' found.
  faireMotif(Color.YELLOW))
                          ^